attempt to solve layout issue

--- a/app/assets/stylesheets/components/_sidenavbar.scss
+++ b/app/assets/stylesheets/components/_sidenavbar.scss
@@ -22,6 +22,7 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
+  max-height: 100vh;
 
   p {
     color: white;
