--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -5,6 +5,21 @@
   margin: 0;
 }
 
+// scroll attempt to solve layout issue
+.tab-pane:hover {
+  .tab-pane::-webkit-scrollbar {
+    width: 8px;
+  }
+  .tab-pane::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px $grey;
+    border-radius: 10px;
+  }
+  .tab-pane::-webkit-scrollbar-thumb {
+    background: $grey;
+    border-radius: 10px;
+  }
+}
+
 .procrastination {
      text-align: center;
   img {
